# KwaaiNet

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.map-frontend  Dockerfile.map-server  Dockerfile.summit-server  Makefile  README.md  flake.nix  install.ps1  install.sh  setup.sh
.github/workflows/: ci.yml  deploy-map.yml  release-riscv.yml  release.yml
apps/map/: .env.development  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/map/src/: App.tsx  index.css  main.tsx  theme.ts
apps/map/src/components/: BenchmarkSection.tsx  HeroSection.tsx  InstallSection.tsx  NetworkGraph.tsx  TrustGraphSection.tsx
apps/map/src/hooks/: useBenchmark.ts  useNetworkStats.ts
apps/map/src/lib/: api.ts
apps/map/src/workers/: benchmark.worker.ts
core/: Cargo.toml
core/crates/kwaai-cli/: Cargo.toml
core/crates/kwaai-cli/src/: block_rpc.rs  cli.rs  config.rs  daemon.rs  display.rs  hf.rs  main.rs  node.rs  rebalancer.rs  service.rs  setup.rs  shard_api.rs  shard_cmd.rs  uninstall.rs  updater.rs  vpk.rs
core/crates/kwaai-compression/src/: sparse.rs
core/crates/kwaai-inference/src/: shard.rs
core/crates/kwaai-p2p-daemon/src/: client.rs  daemon.rs
core/crates/kwaai-trust/: Cargo.toml
core/crates/kwaai-trust/src/: credential.rs  did.rs  lib.rs
core/crates/map-server/: Cargo.toml
core/crates/map-server/src/: cache.rs  crawler.rs  main.rs  routes.rs  state.rs
core/crates/summit-server/: Cargo.toml
core/crates/summit-server/migrations/: 001_initial.sql
core/crates/summit-server/src/: config.rs  db.rs  main.rs  routes.rs  state.rs  vc_issuer.rs
core/crates/summit-server/static/: index.html
core/examples/: dht_node.rs  expert_registry.rs  peer_discovery.rs  tensor_ops.rs
docker/: map-nginx.conf
docs/: BOOTSTRAP_SERVER_V2_REQUIREMENTS.md  CODE_STYLE_GUIDE.md  DEBUGGING_MAP_VISIBILITY.md  FEATURE_GAP_ANALYSIS.md  INTEGRATIONS.md  MAP_SERVER_V2_REQUIREMENTS.md  ONEPAGER.docx  PETALS_PROTOCOL_COMPLETE.md  README.md  TESTING.md  TODO.md  WHITEPAPER.docx  WHITEPAPER.md  api-quickstart.md  contributor-guide.md  getting-started-node.md  network-and-intent-routing.md  reputation.md  roadmap.md  sharded-llm-processing.md
nix/: README.md  containers.nix  crane.nix  cross.nix  devshell.nix  microvm-testing.md  p2pd.nix  packages.nix  proto.nix
nix/k8s-manifests/: constants.nix  default.nix  deployment.nix  namespace.nix  service.nix
nix/modules/: default.nix  hardening.nix  kwaainet.nix  lib.nix  map-server.nix  summit-server.nix
nix/overlays/: cross-cache.nix  cross-fixes.nix  cross-vm.nix
nix/shell-functions/: ascii-art.nix
nix/tests/: containers.nix  cross-smoke.nix  default.nix  four-node-services.nix  four-node.nix  full-rebuild.nix  smoke.nix  two-node-services.nix  two-node.nix
nix/tests/microvm/: constants.nix  default.nix  microvm.nix  network-setup.nix
nix/tests/microvm/lifecycle/: deep-checks.nix  default.nix  kwaainet-checks.nix  lib.nix  p2p-checks.nix  resilience-checks.nix
scripts/: build-p2pd.sh
tests/: mock-vpk-health.py  vpk-lan-test.sh
