[workspace]
resolver = "2"
members = [
    "crates/kwaai-p2p",
    "crates/kwaai-inference",
    "crates/kwaai-distributed",
    "crates/kwaai-compression",
    "crates/kwaai-wasm",
    "crates/kwaai-hivemind-dht",
    "crates/kwaai-p2p-daemon",
    "crates/kwaai-cli",
    "crates/kwaai-trust",
    "crates/summit-server",
]

# Root package for examples
[package]
name = "kwaai-core"
version = "0.2.7"
edition = "2021"
publish = false

[features]
cuda = []
metal = []

[dependencies]
kwaai-p2p = { path = "crates/kwaai-p2p" }
kwaai-inference = { path = "crates/kwaai-inference" }
kwaai-distributed = { path = "crates/kwaai-distributed" }
kwaai-compression = { path = "crates/kwaai-compression" }
kwaai-hivemind-dht = { path = "crates/kwaai-hivemind-dht" }
kwaai-p2p-daemon = { path = "crates/kwaai-p2p-daemon" }
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53", features = ["tokio", "kad", "identify", "noise", "tcp", "yamux", "macros", "request-response", "rsa", "relay"] }
futures = "0.3"
candle-core = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
async-trait = "0.1"
chrono = "0.4"
hex = "0.4"
sha1 = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
rmp-serde = "1.1"
rmpv = "1.0"

[[example]]
name = "p2p_node"
path = "examples/p2p_node.rs"

[[example]]
name = "dht_node"
path = "examples/dht_node.rs"

[[example]]
name = "peer_discovery"
path = "examples/peer_discovery.rs"

[[example]]
name = "tensor_ops"
path = "examples/tensor_ops.rs"

[[example]]
name = "forward_pass"
path = "examples/forward_pass.rs"

[[example]]
name = "quantization"
path = "examples/quantization.rs"

[[example]]
name = "sparse_gradients"
path = "examples/sparse_gradients.rs"

[[example]]
name = "expert_registry"
path = "examples/expert_registry.rs"

[[example]]
name = "local_averaging"
path = "examples/local_averaging.rs"

[[example]]
name = "tensor_exchange"
path = "examples/tensor_exchange.rs"

[[example]]
name = "petals_bootstrap"
path = "examples/petals_bootstrap.rs"

[[example]]
name = "petals_dht"
path = "examples/petals_dht.rs"

[[example]]
name = "petals_visible"
path = "examples/petals_visible.rs"

[[example]]
name = "daemon_test"
path = "examples/daemon_test.rs"

[[example]]
name = "dht_test"
path = "examples/dht_test.rs"

[[example]]
name = "petals_dht_connect"
path = "examples/petals_dht_connect.rs"

[[example]]
name = "query_dht"
path = "examples/query_dht.rs"

[[example]]
name = "query_dht_state"
path = "examples/query_dht_state.rs"

[workspace.package]
version = "0.2.7"
edition = "2021"
authors = ["Kwaai AI Lab <dev@kwaai.ai>"]
license = "MIT"
repository = "https://github.com/Kwaai-AI-Lab/KwaaiNet"
description = "Sovereign AI infrastructure - decentralized inference and training"
keywords = ["ai", "decentralized", "p2p", "wasm", "inference"]
categories = ["network-programming", "wasm", "science"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# P2P networking
libp2p = { version = "0.53", features = ["tokio", "kad", "identify", "noise", "tcp", "yamux", "macros", "request-response", "relay"] }

# ML/Inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
half = { version = "2.4", features = ["std", "serde"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
prost = "0.12"
rmp-serde = "1.1"

# System info
sysinfo = "0.30"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Trust graph — verifiable credentials and DID utilities
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
criterion = "0.5"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "powershell", "homebrew"]
tap = "Kwaai-AI-Lab/homebrew-tap"
publish-jobs = ["homebrew"]
# The release.yml has been manually patched (working-directory: core) for our
# nested workspace layout.  Suppress cargo-dist's "file is out of date" check.
allow-dirty = ["ci"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Build p2pd (Go binary) alongside kwaainet and bundle it in the same archive
extra-artifacts = [
    { build = ["../scripts/build-p2pd.sh"], artifacts = ["p2pd"] },
]

[profile.dist]
inherits = "release"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "s"  # Optimize for size
