[package]
name = "kwaainet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Kwaai-AI-Lab/KwaaiNet"
homepage = "https://kwaai.ai"
description = "kwaainet – KwaaiNet node CLI"
default-run = "kwaainet"
keywords = ["ai", "p2p", "decentralized", "inference", "kwaainet"]
categories = ["command-line-utilities", "network-programming"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/kwaainet-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/kwaainet-{ target }.zip"
pkg-fmt = "zip"

[[bin]]
name = "kwaainet"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde_yaml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# System monitoring
sysinfo = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# HTTP (IP detection, health check, update check)
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# P2P / DHT protocol
libp2p = { workspace = true }
prost = { workspace = true }
rmp-serde = { workspace = true }

# Not yet in workspace.dependencies
sha1 = "0.10"
hex = "0.4"
rmpv = "1.0"
half = { workspace = true }

# HTTP server (OpenAI API)
axum = { version = "0.7", features = ["json"] }

# ML (needed for tensor ops in block_rpc and shard_cmd)
candle-core = { workspace = true }

# KwaaiNet crates
kwaai-p2p = { path = "../kwaai-p2p" }
kwaai-hivemind-dht = { path = "../kwaai-hivemind-dht" }
kwaai-p2p-daemon = { path = "../kwaai-p2p-daemon" }
kwaai-inference = { path = "../kwaai-inference" }
kwaai-trust = { path = "../kwaai-trust" }

# Trust graph dependencies
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }

# Enable Metal GPU acceleration on macOS (Apple Silicon / M-series).
# Cargo merges features from target-specific sections with the base [dependencies] entry.
[target.'cfg(target_os = "macos")'.dependencies]
kwaai-inference = { path = "../kwaai-inference", features = ["metal"] }

# cargo-dist builds Windows MSVC with -Ctarget-feature=+crt-static (fully static binary).
# System OpenSSL on GitHub runners is compiled with /MD (dynamic CRT), which the static
# linker rejects.  Build OpenSSL from source with the correct /MT flags instead.
[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
