[package]
name = "kwaainet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Kwaai-AI-Lab/KwaaiNet"
homepage = "https://kwaai.ai"
description = "kwaainet – KwaaiNet node CLI"
default-run = "kwaainet"
keywords = ["ai", "p2p", "decentralized", "inference", "kwaainet"]
categories = ["command-line-utilities", "network-programming"]


[[bin]]
name = "kwaainet"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde_yaml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# System monitoring
sysinfo = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# HTTP (IP detection, health check, update check)
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# P2P / DHT protocol
libp2p = { workspace = true }
prost = { workspace = true }
rmp-serde = { workspace = true }

# Not yet in workspace.dependencies
sha1 = "0.10"
hex = "0.4"
rmpv = "1.0"
half = { workspace = true }

# HTTP server (OpenAI API)
axum = { version = "0.7", features = ["json"] }

# ML (needed for tensor ops in block_rpc and shard_cmd)
candle-core = { workspace = true }

# KwaaiNet crates
kwaai-p2p = { workspace = true }
kwaai-hivemind-dht = { workspace = true }
kwaai-p2p-daemon = { workspace = true }
kwaai-inference = { workspace = true }
kwaai-trust = { workspace = true }

# Trust graph dependencies
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }

# Enable Metal GPU acceleration on macOS (Apple Silicon / M-series).
# Cargo merges features from target-specific sections with the base [dependencies] entry.
[target.'cfg(target_os = "macos")'.dependencies]
kwaai-inference = { workspace = true, features = ["metal"] }

[dev-dependencies]
tempfile = "3"
