[package]
name = "kwaai-trust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KwaaiNet decentralized trust graph — verifiable credentials, DID utilities, and EigenTrust scoring"

[dependencies]
# Serialisation
serde = { workspace = true }
serde_json = { workspace = true }

# Time (serde needed for VC date fields)
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# P2P identity (PeerId ↔ did:peer)
libp2p = { workspace = true }

# Cryptography — Ed25519 VC proof verification/signing
base64 = { workspace = true }
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }

# Home directory resolution for default credential store path
dirs = { workspace = true }
