[package]
name = "map-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "map.kwaai.ai public API — DHT crawler, live stats, and WebSocket stream"
publish = false

[[bin]]
name = "map-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# DHT / P2P
kwaai-hivemind-dht = { path = "../kwaai-hivemind-dht" }
kwaai-p2p = { path = "../kwaai-p2p" }
kwaai-p2p-daemon = { path = "../kwaai-p2p-daemon" }
libp2p = { workspace = true }
prost = { workspace = true }
sha1 = "0.10"
rmp-serde = { workspace = true }
rmpv = "1.0"
hex = "0.4"
bs58 = { workspace = true }

# In-memory cache with concurrent access
dashmap = "5"

# Serialisation
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }
