[package]
name = "summit-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Kwaai Summit on-ramp server — passkey registration and SummitAttendeeVC issuance"
publish = false

[[bin]]
name = "summit-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { workspace = true }

# WebAuthn / passkey
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Postgres
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }

# Serialisation
serde = { workspace = true }
serde_json = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Cryptography — issuer Ed25519 key for VC signing
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
hex = "0.4"
rand = "0.8"

# Trust + VCs
kwaai-trust = { path = "../kwaai-trust" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# URL parsing (webauthn-rs requires it)
url = "2"
